Externalize php.ini and apache.conf files and update Dockerfile. Set expose_php and ServerSignature off

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,8 @@
 FROM php:7.4-apache
 
-COPY apache.conf /etc/apache2/sites-available/000-default.conf
+COPY trackr-virtualhost.conf /etc/apache2/sites-available/000-default.conf
+COPY php.ini /usr/local/etc/php/php.ini
+COPY apache2.conf /etc/apache2/apache2.conf
 
 RUN docker-php-ext-install pdo pdo_mysql
 
