--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "require": {
     "slim/slim": "^3.0",
     "andrewslince/slim3-mustache-view": "^1.0",
-    "monolog/monolog": "~1.0"
+    "monolog/monolog": "~1.0",
+    "vlucas/phpdotenv": "^5.4"
   },
   "autoload": {
     "psr-4": {
