--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
             - "3306:3306"
         command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --sql_mode="TRADITIONAL"
         environment:
-            MYSQL_ROOT_PASSWORD: ${MYSQL_PASWORD}
+            MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
             MYSQL_DATABASE: ${MYSQL_DATABASE}
         volumes:
           - mysql-data:/var/lib/mysql
