--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "andrewslince/slim3-mustache-view": "^1.0",
     "monolog/monolog": "~1.0",
     "vlucas/phpdotenv": "^5.4",
-    "erusev/parsedown": "^1.7"
+    "erusev/parsedown": "^1.7",
+    "php-amqplib/php-amqplib": "^2.9.0"
   },
   "autoload": {
     "psr-4": {
