--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "monolog/monolog": "~1.0",
     "vlucas/phpdotenv": "^5.4",
     "erusev/parsedown": "^1.7",
-    "php-amqplib/php-amqplib": "^2.9.0"
+    "php-amqplib/php-amqplib": "^2.9.0",
+    "neitanod/forceutf8": "~2.0"
   },
   "autoload": {
     "psr-4": {
