--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "vlucas/phpdotenv": "^5.4",
     "erusev/parsedown": "^1.7",
     "php-amqplib/php-amqplib": "^2.9.0",
-    "neitanod/forceutf8": "~2.0"
+    "neitanod/forceutf8": "~2.0",
+    "defuse/php-encryption": "^2.3"
   },
   "autoload": {
     "psr-4": {
