Add redis container and use redis as session handler

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,6 +4,7 @@ services:
   trackr:
     volumes:
       - .:/var/www/html/trackr
+      - ./z-extended-php.ini:/usr/local/etc/php/conf.d/z-extended-php.ini
   db:
     volumes:
       - ./database/trackr-data:/var/lib/mysql
