--- a/z-extended-php.ini
+++ b/z-extended-php.ini
@@ -1,3 +1,5 @@
 session.save_handler = redis
 session.save_path = "trackr-redis:6379"
 expose_php = Off
+upload_max_filesize = 50M
+post_max_size=50M
