Change access log path to stdout

--- a/fpm.conf
+++ b/fpm.conf
@@ -12,7 +12,7 @@ Mutex posixsem
       ServerName localhost
       ServerAdmin webmaster@localhost
       DocumentRoot /var/www/html/public
-      ErrorLog ${APACHE_LOG_DIR}/error.log
-      CustomLog ${APACHE_LOG_DIR}/access.log combined
+      ErrorLog /proc/1/fd/1
+      CustomLog /proc/1/fd/1 combined
       ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://127.0.0.1:9000/var/www/html/public/$1 timeout=1800
 </VirtualHost>
