Update conf file names and related changes

--- a/fpm.conf
+++ b/fpm.conf
@@ -1,18 +1,9 @@
-ServerTokens Prod
-ServerSignature Off
-Mutex posixsem
+[global]
+error_log = /proc/1/fd/1
 
-<Directory /var/www/html>
-	Options Indexes FollowSymLinks
-	AllowOverride all
-	Require all granted
-</Directory>
+[www]
+access.log = /dev/null
 
-<VirtualHost *:80>
-      ServerName localhost
-      ServerAdmin webmaster@localhost
-      DocumentRoot /var/www/html/public
-      ErrorLog /proc/1/fd/1
-      CustomLog /proc/1/fd/1 combined
-      ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://127.0.0.1:9000/var/www/html/public/$1 timeout=1800
-</VirtualHost>
+clear_env = no
+php_flag[display_errors] = off
+php_admin_flag[log_errors] = on
