--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,11 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\": "src"
+      "App\\": "src",
+      "Tests\\": "tests"
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^11.3"
   }
 }
