Add typesense container

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ RABBITMQ_VHOST=/
 OPENAI_API_KEY=xyz
 DISABLE_ASK_CHATGPT=true
 HIGHLIGHT_LIMIT=500
+TYPESENSE_API_KEY=strong-typesense-key
+TYPESENSE_HOST=trackr-typesense
+TYPESENSE_PORT=8108
