Add typesense php lib and util class for its operations

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "neitanod/forceutf8": "~2.0",
     "defuse/php-encryption": "^2.3",
     "spekulatius/phpscraper": "^0.6.2",
-    "jfcherng/php-diff": "^6.16"
+    "jfcherng/php-diff": "^6.16",
+    "typesense/typesense-php": "^4.8"
   },
   "autoload": {
     "psr-4": {
@@ -19,5 +20,10 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^11.3"
+  },
+  "config": {
+    "allow-plugins": {
+      "php-http/discovery": false
+    }
   }
 }
