--- a/src/rabbitmq/Dockerfile
+++ b/src/rabbitmq/Dockerfile
@@ -1,4 +1,6 @@
-FROM php:fpm-alpine3.14
+FROM php:fpm-alpine
+
+RUN apk --no-cache add linux-headers
 
 RUN docker-php-ext-install pdo pdo_mysql bcmath sockets
 
