Change custom mysql user name

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ TZ=Europe/Istanbul
 DISPLAY_ERROR_DETAILS=1
 DEBUG=1
 TRACKR_BASE_URL=http://localhost
-MYSQL_USER=root
+MYSQL_USER=trackr
 MYSQL_PASSWORD=strong-password
 MYSQL_ROOT_PASSWORD=strong-password
 MYSQL_DATABASE=trackr
