--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mysql:5.7
     restart: always
     volumes:
-      - ./database/trackr-data:/var/lib/mysql
+      - db-data:/var/lib/mysql
       - ./database:/docker-entrypoint-initdb.d
     ports:
       - "3307:3306"
@@ -71,6 +71,8 @@ services:
 
 volumes:
   typesense-data:
+    driver: local
+  db-data:
     driver: local
 
 networks:
