--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     restart: always
     volumes:
       - ./:/var/www/html
+      - ./php.ini:/usr/local/etc/php/conf.d/z-extended-php.ini
     ports:
       - "8081:80"
     depends_on:
